add and style the header of the ping-pong

--- a/index.html
+++ b/index.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html lang="eng">
-  <head>
+  <head >
     <title>ping-pong</title>
+  <!--Bootstrap-->
+        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <!--jquery-->
     <script src="js/jquery-3.2.1.js"></script>
     <!--custom stylesheet-->
-    <link rel="stylesheet" type="text/css" href="css/custom-style.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
 <body>
-        <div class="jumbotron" id="background-header">
-            <div class="jubmbo-section-text">
-                <h1 class="align-center">ping-pong</h1>
-                <p class="align-center">this is a fantastic game!!!</p>
-            </div>
-            <div id="form-section">
-                <h3>hi!! let us play,key in a number to ping-pong</h3>
-                <form>
-                    <input style="color:#000;" type="text" id="myform-item1">
-                    <button type="submit" class="btn btn-info btn-lg" id="myform-item2">play</button>
-                </form>
-            </div>
-            <div id="modal-section">
-
-          <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal" style="width:100px;">RULES</button>
-           <!-- Modal -->
-            <div id="myModal" class="modal fade" role="dialog">
-              <div class="modal-dialog">
-              </div>
-            </div>
-        </div>
+  <header>
+    <h1>PING PONG</h1>
+    <p>this is a fantastic game!!!</p>
+  </header>
+        <div id="form-section">
+              <h3>hi!! let us play,key in a number to ping-pong</h3>
+                  <form>
+                      <input style="color:#000;" type="text" id="myform-item1">
+                      <button type="submit" class="btn btn-info btn-lg" id="myform-item2">play</button>
+                  </form>
+          </div>
     </div>
 
   </body>
