add business logic and jquery in the project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!--jquery-->
     <script src="js/jquery-3.2.1.js"></script>
+    <script src="js/scripts.js"></script>
     <!--custom stylesheet-->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
@@ -15,13 +16,6 @@
     <h1>PING PONG</h1>
     <p>this is a fantastic game!!!</p>
   </header>
-        <div id="form-section">
-              <h3>hi!! let us play,key in a number to ping-pong</h3>
-                  <form>
-                      <input style="color:#000;" type="text" id="myform-item1">
-                      <button type="submit" class="btn btn-info btn-lg" id="myform-item2">play</button>
-                  </form>
-          </div>
     </div>
 
   </body>
