add a form to collect the user input

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     <h1>PING PONG</h1>
     <p>this is a fantastic game!!!</p>
   </header>
-    </div>
+  <div id="form-section">
+  <h3>hi!! let us play,key in a number to ping-pong</h3>
+  <form>
+      <input style="color:#000;" type="text" id="myform-item1">
+      <button type="submit" class="btn btn-info btn-lg" id="myform-item2">play</button>
+  </form>
+</div>
 
   </body>
 </html>
