add class and id selectors to style html elements i.e p,h1 and h3

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-
-  <div class="container">
+<div class="container">
     <header>
       <h1>Ping Pong </h1>
     </header>
@@ -20,17 +19,17 @@
         <li>Level two </li>
       </ul>
     </nav>
-    <article>
+    <div class="rules">
       <h1>Let's play ping pong !</h1>
       <h3>Rules:</h3>
       <p>Ping Pong will count up to your number 1 with the following expecttions</p>
-      <ol>
+      <ol id="rules-li">
         <li>Numbers divisible by 3 become "ping"</li>
         <li>Numbers divisible by 5 become "pong"</li>
         <li>Numbers divisible by 15 become "pingpong"</li>
 
       </ol>
-    </article>
+    </div>
     <form id="ping-pong-form">
       <label for="userInput">Enter a number:</label>
       <input id="userInput" type="number">
