--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <label for="userInput">Enter numbers only:</label>
       <input id="userInput" type="number">
       <div class="btn-group btn-group-lg btn-style">
-      <button type="submit" id="pong-btn">Ping Pong</button>
-      <button id="reset" type="reset" value="Reset">Reset</button>
+      <button type="submit" id="pong-btn"><h4>Ping Pong</h4></button>
+      <button id="reset" type="reset" value="Reset"><h4>Reset</h4></button>
     </div>
     </form>
     <ul id="output"></ul>
