add more images to make the webpage more live

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="https://github.com/evantoh">GitHub url</a></li>
         <li>Created by: </br> evans mwenda</li>
         <li>Level two </li>
+        <img src="img/image1.gif"width="200px">
       </ul>
     </nav>
     <div class="rules">
