add a link to the main project

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <nav>
       <ul>
-        <li><a href="https://github.com/evantoh">GitHub url</a></li>
+        <li><a href="https://evantoh.github.io/ping-pong/">GitHub url</a></li>
         <li>Created by: </br> evans mwenda</li>
         <li>Level two </li>
         <img src="img/image1.gif"width="200px">
