add ul with li to contain the conditions

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="rules">
       <h1>Let's play ping pong !</h1>
       <h3>Rules:</h3>
-      <p>Ping Pong will count up to your number 1 with the following expecttions</p>
+      <p>Ping Pong will count up to your number 1 with the following expectations to be met</p>
       <ol id="rules-li">
         <li>Numbers divisible by 3 become "ping"</li>
         <li>Numbers divisible by 5 become "pong"</li>
