--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
       <ul>
         <li><a href="https://evantoh.github.io/ping-pong/">GitHub url</a></li>
-        <li>Created by: </br> evans mwenda</li>
+        <li>Created by: </br> Evans mwenda</li>
         <li>Level two </li>
         <img src="img/image1.gif"width="200px">
       </ul>
@@ -23,7 +23,7 @@
     <div class="rules">
       <h1>Let's play ping pong !</h1>
       <h3>Rules:</h3>
-      <p>Ping Pong will count up to your number 1 with the following expectations to be met</p>
+      <p>Ping Pong will count up to your number 1 with the following expectations</p>
       <ol id="rules-li">
         <li>Numbers divisible by 3 become "ping"</li>
         <li>Numbers divisible by 5 become "pong"</li>
