add spacing and identication

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="js/jquery-3.2.1.js"></script>
+  <script src="js/jquery-3.2.1.js" type="text/javascript"></script>
   <script type="text/javascript" src="js/scripts.js"></script>
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
   <title>Ping Pong</title>
@@ -39,7 +39,6 @@
     </form>
     <ul id="output"></ul>
     <footer>Copyright &copy;evans</footer>
-
   </div>
 </body>
 </html>
